small edits and additions

--- a/assignment/starter_file.html
+++ b/assignment/starter_file.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title> Color Theory </title>
-    <link href="styles/first.css" rel="stylesheet">
+	<link href="styles/first.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     <img src="images/color_icon_brown.png" alt="Graphic: Brown shades">
 
     <figcaption>
-        Image sources: <a href="http://commons.wikimedia.org/wiki/File:Color_icon_lilac.svg">Lilac</a>, <a href="http://commons.wikimedia.org/wiki/File:Color_icon_pink.svg">pink</a>, <a href="http://commons.wikimedia.org/wiki/File:Color_icon_brown.svg">brown</a>.
+        Image sources: <a href="http://commons.wikimedia.org/wiki/File:Color_icon_lilac.svg">Lilac</a>, <a href="http://commons.wikimedia.org/wiki/File:Color_icon_pink.svg">pink</a>, <a href="http://commons.wikimedia.org/wiki/File:Color_icon_brown.svg">brown</a>
     </figcaption>
 </figure>
 
@@ -70,7 +70,7 @@
 
 <p>All text taken from Wikipedia, <a href="http://en.wikipedia.org/wiki/Color_theory">Color Theory</a>. This page is part of an assignment in a University of Florida course, <a href="https://introwebapps.wordpress.com/">Introduction to Web Apps</a>.</p>
 
-<p>This document was styled by YOUR NAME HERE. It is based on a class assignment found in this GitHub repo.</p>
+<p>This document was styled by YOUR NAME HERE. It is based on a class assignment found in <a href="https://github.com/macloo/CSS-intro-with-GitHub">this GitHub repo</a>.</p>
 
 </body>
 </html>
