fixed typo in tag

--- a/assignment/starter_file.html
+++ b/assignment/starter_file.html
@@ -32,7 +32,7 @@
 	</figcaption>
 </figure>
 
-<p>Subsequently, German and English scientists established in the late 19th century that color perception is best described in terms of a different set of primary colors -- <strong>red, green and blue violet (RGB)</stong> -- modeled through the additive mixture of three monochromatic lights.</p>
+<p>Subsequently, German and English scientists established in the late 19th century that color perception is best described in terms of a different set of primary colors -- <strong>red, green and blue violet (RGB)</strong> -- modeled through the additive mixture of three monochromatic lights.</p>
 
 <h2>Complementary Colors</h2>
 
